--- a/App.config
+++ b/App.config
@@ -10,6 +10,12 @@
             <setting name="IsMaximized" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="wpm" serializeAs="String">
+                <value>12</value>
+            </setting>
+            <setting name="letterWpm" serializeAs="String">
+                <value>8</value>
+            </setting>
         </MornyMorse.Properties.Settings>
     </userSettings>
 </configuration>
